--- a/package.json
+++ b/package.json
@@ -17,13 +17,8 @@
     "vue-i18n": "^8.18.2"
   },
   "devDependencies": {
-    "babel-eslint": "^10.1.0",
-    "eslint": "^4.19.1",
-    "eslint-friendly-formatter": "^4.0.1",
-    "eslint-loader": "^2.2.1",
-    "eslint-plugin-vue": "^4.0.0",
-    "node-sass": "^4.14.1",
     "push-dir": "^0.4.1",
+    "sass": "^1.70.0",
     "sass-loader": "^7.3.1"
   }
 }
